--- a/reactapp/src/index.css
+++ b/reactapp/src/index.css
@@ -4,13 +4,13 @@ body {
   font-family: sans-serif;
 }
 
-.rc-slider-throttle {
+.rc-slider-right {
   position: absolute;
   right: 30px;
   bottom: 20px;
   height: 80%;
 }
-.rc-slider-steering {
+.rc-slider-left {
   position: absolute;
   left: 30px;
   bottom: 20px;
